--- a/templates/threads.html
+++ b/templates/threads.html
@@ -68,9 +68,14 @@
           <div class="card_content">
             {{thread.content | safe}} 
 
-            {% for media in thread.media_attachments%}
+            {% for media in thread.media_attachments %}
               {% if media.type == 'image'%}
               <img src="{{media.url}}" />
+              {% elif media.type == 'gifv' %}
+              <video controls autoplay>
+                <source src="{{media.url}}" type="video/mp4">
+                Your browser does not support the video tag.
+              </video> 
               {% endif %}
             {% endfor %}
           </div>
@@ -87,6 +92,11 @@
                   {% for media in descendant.media_attachments%}
                     {% if media.type == 'image'%}
                     <img src="{{media.url}}" />
+                    {% elif media.type == 'gifv' %}
+                    <video controls autoplay>
+                      <source src="{{media.url}}" type="video/mp4">
+                      Your browser does not support the video tag.
+                    </video> 
                     {% endif %}
                   {% endfor %}
                 </div>
