--- a/templates/threads.html
+++ b/templates/threads.html
@@ -17,6 +17,10 @@
       padding: 1em;
       border-radius: 5px;
       margin: 1em 0;
+
+      & a {
+        color: white;
+      }
     }
     summary {
       cursor: pointer;
@@ -48,6 +52,7 @@
         border-radius: 5px;
         max-width: 100%;
         object-fit: cover;
+        border: 1px solid rgba(34, 34, 34, 0.15);
       }
 
       & .meta {
@@ -68,7 +73,7 @@
   <body>
     <header>
       <h1>Ayo's Threads</h1>
-      <p>Total: {{threads | length}}</p>
+      <p>Some of my favorie threads. See the <a href="https://ayco.io/sh/threads">source code</a>.</p>
     </header>
     <main>
       <ul>
