--- a/templates/threads.html
+++ b/templates/threads.html
@@ -49,7 +49,7 @@
     .card_content {
 
       & *:not(.meta, .descendant *) {
-        margin-top: 1em;
+        margin-bottom: 1em;
       }
 
       & img, & video {
