--- a/templates/threads.html
+++ b/templates/threads.html
@@ -60,14 +60,22 @@
       }
 
       & .meta {
-        font-size: small; color: #888;
         margin-bottom: 5px;
+
+        & a {
+          font-size: small;
+          color: #888;
+        }
+        & a:hover { 
+          color: blue;
+        }
+        
       }
     }
 
     .card_avatar img {
       border: 1px solid rgba(34, 34, 34, 0.35);
-      border-radius: 50%;
+      border-radius: 5px;
       display: inline;
       width: 50px;
     }
@@ -93,7 +101,7 @@
 
           <div class="card_content">
             <div class="meta">
-              <span>{{ thread.created_at }}</span> &#8729; <a href="{{thread.url}}" target="_blank">&nearr;</a>
+              <a href="{{thread.url}}" target="_blank">{{ thread.created_at }}</a>
             </div>
             {{thread.content | safe}} 
 
@@ -121,9 +129,8 @@
 
                   <div class="card_content">
                     <div class="meta">
-                      <span>{{ descendant.created_at }}</span> &bullet; <a href="{{descendant.url}}" target="_blank">&nearr;</a>
+                      <a href="{{descendant.url}}" target="_blank">{{ descendant.created_at }}</a>
                     </div>
-
                     {{ descendant.content | safe }}
                     {% for media in descendant.media_attachments%}
                       {% if media.type == 'image'%}
