style: more readable text color

--- a/templates/threads.html
+++ b/templates/threads.html
@@ -10,6 +10,7 @@
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       max-width: 570px;
       margin: 0 auto;
+      color: #232323;
     }
     header, footer {
       background: linear-gradient(45deg, #3054bf, #416fff);
