--- a/templates/threads.html
+++ b/templates/threads.html
@@ -86,7 +86,7 @@
   <body>
     <header>
       <h1>Ayo's Threads</h1>
-      <p>Some of my favorie threads. See the <a href="https://ayco.io/sh/threads">source code</a>.</p>
+      <p>Some of my favorite threads. See the <a href="https://ayco.io/sh/threads">source code</a>.</p>
     </header>
     <main>
       <ul>
