--- a/templates/threads.html
+++ b/templates/threads.html
@@ -22,8 +22,10 @@
         color: white;
       }
     }
-    p, img, video {
-      margin-top: 1em;
+    main {
+      & p, & img, & video {
+        margin-top: 5px;
+      }
     }
     summary:hover {
       text-decoration: underline;
@@ -85,6 +87,7 @@
       border: 1px solid rgba(34, 34, 34, 0.35);
       border-radius: 5px;
       display: inline;
+      margin-top: 1em;
       width: 50px;
     }
 
@@ -117,7 +120,7 @@
               {% if media.type == 'image'%}
               <img src="{{media.url}}" />
               {% elif media.type == 'gifv' %}
-              <video controls autoplay="autoplay" muted loop>
+              <video autoplay="autoplay" muted loop>
                 <source src="{{media.url}}" type="video/mp4">
                 Your browser does not support the video tag.
               </video> 
@@ -144,7 +147,7 @@
                       {% if media.type == 'image'%}
                       <img src="{{media.url}}" />
                       {% elif media.type == 'gifv' %}
-                      <video controls autoplay="autoplay" muted loop>
+                      <video autoplay="autoplay" muted loop>
                         <source src="{{media.url}}" type="video/mp4">
                         Your browser does not support the video tag.
                       </video> 
