--- a/templates/threads.html
+++ b/templates/threads.html
@@ -120,7 +120,7 @@
               {% if media.type == 'image'%}
               <img src="{{media.url}}" />
               {% elif media.type == 'gifv' %}
-              <video autoplay="autoplay" muted loop>
+              <video controls autoplay="autoplay" muted loop>
                 <source src="{{media.url}}" type="video/mp4">
                 Your browser does not support the video tag.
               </video> 
@@ -147,7 +147,7 @@
                       {% if media.type == 'image'%}
                       <img src="{{media.url}}" />
                       {% elif media.type == 'gifv' %}
-                      <video autoplay="autoplay" muted loop>
+                      <video controls autoplay="autoplay" muted loop>
                         <source src="{{media.url}}" type="video/mp4">
                         Your browser does not support the video tag.
                       </video> 
