--- a/templates/threads.html
+++ b/templates/threads.html
@@ -122,7 +122,7 @@
 
     .card_avatar img {
       border: 1px solid rgba(34, 34, 34, 0.35);
-      border-radius: 5px;
+      border-radius: 50%;
       display: inline;
       margin-top: 1em;
       width: 50px;
